# dtsfmt

./: .gitmodules  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflow/: build.yml
.github/workflows/: build.yml  release.yml
scripts/: install.sh
src/: context.rs  formatter.rs  lib.rs  main.rs  parser.rs  printer.rs  utils.rs
src/config/: constants.rs  filename.rs  mod.rs
src/emitter/: files.rs  mod.rs  stdout.rs
src/layouts/: adv360.rs  glove80.rs  imprint_letters_only_full_bottom_row.rs  mod.rs  sweep.rs
src/test_utils/: fs.rs  mod.rs  spec_helpers.rs  spec_parser.rs
tests/: test.rs
tests/specs/: byte_literals.txt  comments.txt  delete.txt  headers.txt  identifiers.txt  includes.txt  labeled_item.txt  node.txt  preprocessor.txt  property.txt  references.txt
tests/specs/layouts/: adv360.txt
