[package]
name = "dtsfmt"
version = "0.6.1"
edition = "2021"

[[bin]]
name = "dtsfmt"
path = "src/main.rs"

[lib]
name = "dtsfmt"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
console = "0.15.7"
ignore = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
similar = "2.2.1"
toml = "0.7.6"
tree-sitter = "0.20.10"
typed-builder = "0.21.1"

[build-dependencies]
cc = "*"
